# LinkedList

./: .gitignore  CMakeLists.txt  README.md
Notes/: Notes.org
src/: linkedlist.cpp  main.cpp
src/lib/: linkedlist.hpp
